feat: 实现任务管理系统与地图元素交互功能
- Task.h/TaskManager: 添加任务管理和地图元素组织，支持多任务切换和可见性控制
- TaskListWidget/TaskDialog: 实现任务列表UI和创建/编辑对话框，支持唯一ID和名称验证
- ElementDetailWidget: 新增详情浮窗，支持内联地形选择和所有元素类型删除
- RegionFeatureDialog: 添加区域地形特征选择（平原/丘陵/山地/高山地）
- MapPainter: 扩展ElementInfo结构，支持annotationId和element指针关联
- main.cpp: 集成任务管理，实现地形修改和元素删除回调，优化清除逻辑
- CMakeLists.txt: 更新构建配置，添加新模块源文件

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,17 @@ add_executable(drawing-demo
     main.cpp
     InteractiveMapWidget.h
     InteractiveMapWidget.cpp
+    ElementDetailWidget.h
+    ElementDetailWidget.cpp
+    Task.h
+    TaskManager.h
+    TaskManager.cpp
+    TaskListWidget.h
+    TaskListWidget.cpp
+    TaskDialog.h
+    TaskDialog.cpp
+    RegionFeatureDialog.h
+    RegionFeatureDialog.cpp
 )
 
 # 链接库
